# VAIC-Nextlevel

./: .dockerignore  .editorconfig  .env.example  .env.gcp.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.gcp.yml  docker-compose.yml
.ai/: coding-style.md  (+2 more)
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_documents_table.py  002_create_chunks_relations_processing_logs.py  003_create_embedding_jobs_table.py  004_add_unknown_to_doc_type_authority_level.py  005_create_bank_products_table.py  006_create_users_table.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: auth.py  chat.py  documents.py  embeddings.py  health.py  ingestion.py  prompt.py  retrieval.py  routes.py  search.py
backend/app/application/: base_service.py  knowledge.py  retrieval.py
backend/app/application/commands/: ingest_document.py
backend/app/application/dto/: document_dto.py  knowledge_dto.py  search_dto.py
backend/app/application/services/: document_service.py  embedding_service.py  knowledge_service.py  search_service.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: chunk.py  document.py  embedding_job.py  processing_log.py  relation.py
backend/app/domain/repositories/: chunk_repo.py  document_repo.py  embedding_job_repo.py  processing_log_repo.py  relation_repo.py
backend/app/domain/services/: chunking_service.py
backend/app/domain/value_objects/: authority_level.py  chunk_type.py  document_status.py  document_type.py  embedding_status.py  ingestion_status.py  relation_type.py  search_result.py
backend/app/generation/: __init__.py
backend/app/generation/llm/: __init__.py  deepseek_client.py  deepseek_service.py  interface.py
backend/app/guardrails/: rules.py
backend/app/models/: entities.py  enums.py  orm.py  schemas.py
backend/app/presentation/: exceptions.py
backend/app/repositories/: bank_product_store.py  document_loader.py  document_store.py  relation_store.py  user_store.py  vector_store.py
backend/app/services/: auth_service.py  chat_service.py  document_relation_service.py  document_service.py  embedding_service.py  guardrail_service.py  ingestion_service.py  llm_service.py  rag_service.py
backend/app/utils/: constants.py  datetime_utils.py  uuid_utils.py
backend/migrations/: 0001_init.sql  0002_grants.sql
backend/scripts/: ingest.py  ingest_bank_docs.py  ingest_bank_rates.py  ingest_demo_conflict_case.py  ingest_document_relations.py
backend/tests/: conftest.py  test_chat_service_wave4.py  test_deepseek_client.py  test_document_relation.py  test_guardrails.py  test_ki_pipeline_processors.py  test_main.py  test_prompt_builder.py  test_response_formatter.py
backend/tests/unit/: test_domain_exceptions.py  test_exceptions.py  test_health.py
(+290 files in other folders)
