[project]
name = "vaic-backend"
version = "1.0.0"
description = "VAIC Banking RAG API — Enterprise Banking Knowledge Intelligence"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    # Pydantic
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Logging
    "structlog>=24.0.0",
    # HTTP client (AI service calls)
    "httpx>=0.27.0",
    # LLM client (DeepSeek / OpenAI-compatible)
    "openai>=1.40.0",
    # Env file loading
    "python-dotenv>=1.0.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # File upload + document parsing
    "python-multipart>=0.0.9",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.24.0",
    # Compression
    "brotli>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "types-passlib>=1.7.0",
    "sqlalchemy[mypy]>=2.0.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff ────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PTH", "RUF"]
ignore = [
    "B008",    # do not perform function calls in default arguments (Depends)
    "B024",    # abstract base class with no abstract methods (BaseService, BaseRepository)
    "RUF012",  # mutable class attributes (SQLAlchemy mapped_column)
    "RUF005",  # iterable unpacking — structlog processor lists are more readable concatenated
    "A003",    # shadow built-in: 'id', 'type' common in domain
    "N818",    # Exception naming: DomainException/AppException pattern is intentional
    "UP046",   # Generic type param syntax — keep Generic[T] for Pydantic/SQLAlchemy compat
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]
"alembic/*" = ["ANN", "INP001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── MyPy ────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["alembic.*", "tests.*"]
ignore_errors = true

# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=0 -v"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
